ChangeLog for cryptmount (http://cryptmount.sourceforge.net)

11Sep22	- Revised installation instructions and top-level README

03Sep22	- *** cryptmount-6.0 released

14Aug22	- Revised algorithm test-cases in mudslinger script to align to OpenSSL-3.0

06Aug22	- Refreshed cipher algorithm names to match OpenSSL/libgcrypt conventions
	Converted default libgcrypt keycipher to aes256-xts and keyhash to sha256

24Jul22	- Converted setup-script to use LUKS format by default

27Dec20	- Incorporated updated German translations from Helge Kreutzmann

06Sep20	- Refreshed cipher-mode and loop-device selection in "mudslinger" testing script

16Nov19	- Refined handling of passwords in "mudslinger" testing script

06Oct19	- Improved documentation of default values in cmtab manual page

28Sep19	- Removed use of 'minix' filesystem in testing script

06Jan19	- Fixed various memory leaks in mount/unmount pathways

05Jan19	- Fixed memory cleanup error on closedown when using multiple targets

17Mar18	- *** cryptmount-5.3 released

27Jan18	- Improved handling of LUKS plain files for libcryptsetup-2.x.
	Changed default location of cmtab to /etc/cryptmount/cmtab

17Jan18	- Minor updates to documentation & Debian packaging

16Dec17	- Patched to support cryptsetup-2.x
	Updated to automake-1.15

30Sep16	- Suppressed benign error codes when handling '--all' targets

11Aug16	- Improved detection of already configured targets

05Aug16	- Improved handling of '--all' with already mounted filesystems

02Apr16	- Updated bug-report email address

25Oct15	- *** cryptmount-5.2 released

22Oct15	- Added "supath" option to configure PATH via /etc/cryptmount/cmtab

07Oct15	- Improved setup of PATH when invoking fsck

18Aug15	- Dispensed with debian/dirs installation-directory list

17Aug15	- Allowed multiple attempts for password entry in setup script

16Aug15	- Updated debian/rules build-script to use debhelper v7

07Jul15	- Removed support for dynamically loadable key-managers
