@@ -32,7 +32,8 @@ packages to be available, and should be driven by the "configure" script.
 
 If the configure script is missing, for example if working with a clone of
 cryptmount's [GitHub repository](https://github.com/rwpenney/cryptmount),
-then you may need to set up autoconf (version 2.61 or later), and run
+then you may need to set up [autoconf](https://www.gnu.org/software/autoconf/)
+(version 2.61 or later), and run
 
     aclocal; autoconf; automake -a -c -i
 
